# xmpad

./: LICENSE  README.md
case/: xmpad.gcode  xmpad.scad  xmpad.stl  xmpad_button.gcode  xmpad_button.stl
firmware/: Cargo.toml
firmware/.cargo/: config  config.toml
firmware/src/: main.rs
