[package]
name = "xmpad"
version = "0.1.0"
edition = "2021"
authors = ["Robert Walker <rob@tenfoot.org.uk>"]
description = "xmpad keyboard firmware"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rwalkr/xmpad"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-human-interface-device = "0.3"
heapless = "0.7.16"
static_cell = "2.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[dependencies.packed_struct]
version = "0.10"
default-features = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
